--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,7 +136,7 @@ section div h3 {
     border-color: #39a6b2;
 }
 
-.intro {
+.intro, .trainers, .contact {
     text-align: center;
 }
 
@@ -175,10 +175,6 @@ section div h3 {
 
 .steps span {
     font-size: 38px;
-}
-
-.trainers {
-    text-align: center;
 }
 
 .trainer {
@@ -222,4 +218,26 @@ section div h3 {
 .trainer-bio p {
     font-size: 17px;
     line-height: 1.3;
+}
+
+.contact {
+    background: #024e76;
+}
+
+.contact h2 {
+    color: #fce138;
+}
+
+.contact-info iframe {
+    width: 400px;
+    height: 400px;
+}
+
+.contact-info div {
+    display: inline-block;
+    text-align: left;
+    vertical-align: top;
+    width: 410px;
+    margin: 30px 0 0 60px;
+    color: white;
 }
