--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,10 +142,11 @@ section div h3 {
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 
 .primary-border {
@@ -156,20 +157,16 @@ section div h3 {
     border-color: #39a6b2;
 }
 
-.intro, .trainers, .contact {
-    text-align: center;
-}
-
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 
 .steps {
-    text-align: center;
     background: #fce138;
 }
 
@@ -211,6 +208,10 @@ section div h3 {
 
 .text-right {
     text-align: right;
+}
+
+.flex-row {
+    display: flex;
 }
 
 .trainer img  {
@@ -277,3 +278,4 @@ section div h3 {
 .contact-info a {
     color: #fce138;
 }
+
